# aupx-slim

./: .gitignore  README.md  main.py  pyproject.toml
